<resources>
    <string name="app_name">Pizza App</string>
    <string name="nom_pizza">Yes, it s the pizza</string>
    <string name="napolitaine">Napolitana</string>
    <string name="royale">Royal</string>
    <string name="quatre_fromages">Four Cheeses</string>
    <string name="montagnarde">Mountain</string>
    <string name="raclette">Raclette</string>
    <string name="hawai">Hawaiian</string>
    <string name="panna_cota">Panna Cotta</string>
    <string name="tiramisu">Tiramisu</string>
    <string name="reset">Reset All</string>
    <string name="nb_table">Table n°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
