<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BTN_Napolitaine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/napolitaine"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/BTN_Royale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXTB_NumTable" />

    <Button
        android:id="@+id/BTN_Royale"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/royale"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/BTN_QuatreFromages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_Napolitaine" />

    <Button
        android:id="@+id/BTN_QuatreFromages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/quatre_fromages"
        app:cornerRadius="100dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BTN_Montagnarde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_Royale" />

    <Button
        android:id="@+id/BTN_Montagnarde"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/montagnarde"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/BTN_Raclette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_QuatreFromages" />

    <Button
        android:id="@+id/BTN_Raclette"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/raclette"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/BTN_Hawai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BTN_Montagnarde" />

    <Button
        android:id="@+id/BTN_Hawai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hawai"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/BTN_PannaCota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BTN_Raclette" />

    <Button
        android:id="@+id/BTN_PannaCota"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/panna_cota"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/BTN_Reset"
        app:layout_constraintEnd_toStartOf="@id/BTN_Tiramisu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BTN_Hawai" />

    <Button
        android:id="@+id/BTN_Tiramisu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tiramisu"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/BTN_Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/BTN_PannaCota"
        app:layout_constraintTop_toBottomOf="@id/BTN_Hawai" />

    <Button
        android:id="@+id/BTN_Reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reset"
        android:backgroundTint="@color/design_default_color_primary_variant"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BTN_Tiramisu"/>

    <TextView
        android:id="@+id/TXTB_NomPizza"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#03A9F4"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TXTB_NumTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />


    <TextView
        android:id="@+id/TXTB_NumTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#03A9F4"
        android:text="@string/nb_table"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/BTN_Napolitaine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TXTB_NomPizza"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>